generated-tests/tests/snapshots/rust/rust__test_generated_array_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let arr: [i32; 3] = [1, 2, 3];

AST:
(source_file
  (let_declaration
    (identifier arr)
    (array_type
      (primitive_type)
      (integer_literal)
    )
    (array_expression
      (integer_literal)
      (integer_literal)
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "arr",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
