generated-tests/tests/snapshots/rust/rust__test_generated_assignment_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
x1 = y

AST:
(source_file
  (ERROR
    (assignment_expression
      (identifier x1)
      (identifier y)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
