generated-tests/tests/snapshots/rust/rust__test_generated_await_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
future.await

AST:
(source_file
  (expression_statement
    (await_expression
      (identifier future)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
