generated-tests/tests/snapshots/rust/rust__test_generated_closure_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let closure = |x3| x3 + y2;

AST:
(source_file
  (let_declaration
    (identifier closure)
    (closure_expression
      (closure_parameters
        (identifier x3)
      )
      (binary_expression
        (identifier x3)
        (identifier y2)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "closure",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "x3",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "closure",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 12,
        },
        SerializableUsage {
            name: "x3",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 16,
            end_line: 1,
            end_column: 18,
        },
        SerializableUsage {
            name: "x3",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 20,
            end_line: 1,
            end_column: 22,
        },
        SerializableUsage {
            name: "y2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 25,
            end_line: 1,
            end_column: 27,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
