generated-tests/tests/snapshots/rust/rust__test_generated_const_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
const CONST: i32 = 42;

AST:
(source_file
  (const_item
    (identifier CONST)
    (primitive_type)
    (integer_literal)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "CONST",
            line_number: 1,
            definition_type: ConstDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
